/*
 * Copyright 2019 Xilinx Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
#ifndef OPENPOSE_UTIL_HPP
#define OPENPOSE_UTIL_HPP

#include "vitis/ai/nnpp/reid.hpp"
#include <opencv2/highgui.hpp>
#include <opencv2/imgproc.hpp>
#include <vector>

using namespace std;
using namespace cv;

namespace vitis {
namespace ai {

float g_mean[512] = {
    0.17958578, 0.16981862, 0.15107176, 0.19007948, 0.20976262, 0.1672768,
    0.21426554, 0.32725421, 0.16449991, 0.20378132, 0.14334841, 0.15038218,
    0.20920378, 0.19957308, 0.20530987, 0.1752771,  0.17666368, 0.36515149,
    0.17193435, 0.15183689, 0.17155461, 0.20439814, 0.19174236, 0.19680561,
    0.17843808, 0.21918584, 0.19503956, 0.17912279, 0.21515556, 0.20056847,
    0.15212771, 0.23729691, 0.18866518, 0.14296502, 0.19362862, 0.18435849,
    0.19668151, 0.18556507, 0.13317105, 0.16021247, 0.16359368, 0.14900963,
    0.18537177, 0.19468841, 0.15600893, 0.17763431, 0.192619,   0.29058355,
    0.19629435, 0.17586361, 0.18693906, 0.19570833, 0.16162731, 0.16621666,
    0.15611738, 0.21939681, 0.22364007, 0.20453274, 0.22075926, 0.19269729,
    0.18813404, 0.22071967, 0.18607146, 0.20397948, 0.15550707, 0.2008737,
    0.11921065, 0.2424349,  0.24359131, 0.19689551, 0.19143473, 0.14612073,
    0.15574993, 0.21003373, 0.17205332, 0.16644162, 0.1667303,  0.17354973,
    0.18918717, 0.1707474,  0.18266186, 0.18393816, 0.19244291, 0.28943703,
    0.16146073, 0.16811945, 0.1687053,  0.15089001, 0.16484748, 0.15767398,
    0.11900948, 0.19232635, 0.20795184, 0.19027938, 0.14553164, 0.16538344,
    0.14045234, 0.15708755, 0.19416119, 0.13518599, 0.24926147, 0.20581721,
    0.2058704,  0.18053764, 0.15253524, 0.11410768, 0.20336024, 0.18819045,
    0.16546042, 0.20094933, 0.18359736, 0.14667234, 0.18000956, 0.16034909,
    0.18292297, 0.20667154, 0.15094985, 0.29313827, 0.18745109, 0.19101019,
    0.18299396, 0.18383177, 0.16068235, 0.1230616,  0.1888528,  0.17147736,
    0.18070002, 0.21552864, 0.13563241, 0.22034813, 0.18815424, 0.19940753,
    0.18925141, 0.18570791, 0.23472057, 0.25238615, 0.1896673,  0.19170167,
    0.19390383, 0.18019536, 0.13468178, 0.22381198, 0.18030106, 0.20552064,
    0.20474921, 0.2036203,  0.19145317, 0.17750852, 0.18705849, 0.21143611,
    0.15776473, 0.15045652, 0.22515632, 0.15493833, 0.12281805, 0.19699788,
    0.22436103, 0.23894481, 0.17154002, 0.18705097, 0.17294018, 0.29223916,
    0.20529209, 0.38591087, 0.23414962, 0.21714778, 0.16462521, 0.19530192,
    0.18373381, 0.16642322, 0.195529,   0.1680214,  0.20422299, 0.232803,
    0.17377239, 0.1278955,  0.20631014, 0.2003174,  0.21952331, 0.16165806,
    0.22241274, 0.16811332, 0.29976085, 0.1722783,  0.16477917, 0.20942262,
    0.21770379, 0.20463821, 0.15146811, 0.17989111, 0.17145793, 0.17675103,
    0.21287131, 0.2120413,  0.1591215,  0.1817397,  0.17215249, 0.12532748,
    0.18383168, 0.16375495, 0.1507733,  0.20405756, 0.24760954, 0.14517462,
    0.24325424, 0.19670179, 0.17208238, 0.19035749, 0.16117227, 0.20392971,
    0.15097144, 0.15389746, 0.19861583, 0.15965064, 0.22680925, 0.18508565,
    0.16837099, 0.18989222, 0.16490403, 0.20814033, 0.21698588, 0.21850069,
    0.16398396, 0.16807815, 0.15723825, 0.16413248, 0.20107493, 0.19892436,
    0.18762834, 0.17283057, 0.18325773, 0.17078133, 0.18221442, 0.23330685,
    0.16339678, 0.1710638,  0.17097214, 0.27877337, 0.13959129, 0.22948177,
    0.16617624, 0.17388405, 0.29353628, 0.13535328, 0.17395782, 0.27226803,
    0.20254858, 0.15141715, 0.17029716, 0.20160511, 0.19498861, 0.20462134,
    0.18659598, 0.20669055, 0.18238227, 0.30634043, 0.19350983, 0.26067385,
    0.23145056, 0.17128287, 0.18267833, 0.21556999, 0.16283579, 0.18605803,
    0.18407167, 0.15252754, 0.21068157, 0.15663794, 0.16919652, 0.19701731,
    0.16431327, 0.1989986,  0.20099778, 0.14042799, 0.25759816, 0.1609797,
    0.20596324, 0.15857495, 0.19969635, 0.17281722, 0.35903203, 0.15452181,
    0.16738734, 0.16199361, 0.30119383, 0.17715104, 0.18528654, 0.16052842,
    0.22170179, 0.20691721, 0.14114286, 0.16334434, 0.18597709, 0.22449395,
    0.18929163, 0.19851287, 0.18046091, 0.23954788, 0.15299049, 0.11443378,
    0.16902673, 0.21157324, 0.14382505, 0.14046387, 0.22539426, 0.18609844,
    0.20058802, 0.17309265, 0.15940838, 0.20877674, 0.19104411, 0.1963574,
    0.20852488, 0.15923418, 0.16233942, 0.16084367, 0.243076,   0.16457154,
    0.21732992, 0.22753547, 0.13811396, 0.18508199, 0.17525984, 0.19340058,
    0.1850934,  0.16669779, 0.16750461, 0.18977359, 0.15806158, 0.16234627,
    0.18954954, 0.22914337, 0.19543009, 0.19630304, 0.18581903, 0.14419572,
    0.17136951, 0.17592295, 0.19963089, 0.18379794, 0.1783559,  0.23424689,
    0.13843612, 0.19166391, 0.16822371, 0.16715167, 0.20359617, 0.1653233,
    0.15704741, 0.23089682, 0.18934087, 0.15556875, 0.16143027, 0.15858796,
    0.18231316, 0.14729233, 0.16806218, 0.20082001, 0.19215693, 0.18022613,
    0.18751827, 0.21289462, 0.18118067, 0.17148514, 0.20268528, 0.17775419,
    0.17468852, 0.19901372, 0.20439053, 0.21907195, 0.19122304, 0.21120481,
    0.22970332, 0.17611468, 0.15344714, 0.22202653, 0.15430424, 0.15581477,
    0.21591528, 0.20731977, 0.21288158, 0.15903573, 0.16582239, 0.18192275,
    0.19188872, 0.19298367, 0.16008607, 0.27558014, 0.17473766, 0.15771157,
    0.18671457, 0.21019076, 0.17544805, 0.16421632, 0.1971924,  0.195875,
    0.14372543, 0.16294043, 0.20025712, 0.21736884, 0.25002143, 0.19830497,
    0.17367075, 0.14627524, 0.16069429, 0.16465496, 0.19408283, 0.19730407,
    0.14949894, 0.19118123, 0.23249301, 0.19632713, 0.1485291,  0.15006113,
    0.17596161, 0.24353123, 0.14649916, 0.18437339, 0.17211829, 0.18395059,
    0.16724917, 0.19243895, 0.17669922, 0.14751406, 0.17917323, 0.21825261,
    0.19959353, 0.25828788, 0.17748208, 0.21201448, 0.18350875, 0.20338045,
    0.19883965, 0.16666058, 0.22845794, 0.24670854, 0.18631525, 0.16507433,
    0.16441134, 0.15092799, 0.18982331, 0.1889742,  0.1901347,  0.1694468,
    0.18533307, 0.22137399, 0.1911573,  0.18785267, 0.25282487, 0.16867748,
    0.15471146, 0.21997935, 0.17269117, 0.17614941, 0.16789143, 0.18058214,
    0.15777166, 0.21340053, 0.17663516, 0.19223447, 0.23927034, 0.18324138,
    0.20395446, 0.18820111, 0.19007775, 0.15421522, 0.20553935, 0.18147647,
    0.24452859, 0.20956156, 0.18075784, 0.17762317, 0.16660371, 0.19004427,
    0.20898315, 0.17657503, 0.18036267, 0.16296664, 0.20210303, 0.15584539,
    0.15221629, 0.20175047, 0.14068907, 0.16817746, 0.20550314, 0.22871919,
    0.18854888, 0.19817744, 0.22058749, 0.16786115, 0.21669906, 0.17715895,
    0.212632,   0.20451881, 0.16978467, 0.202005,   0.14609948, 0.18052544,
    0.18414074, 0.1973041,  0.18835953, 0.1282617,  0.18121631, 0.15610352,
    0.1763968,  0.10949048, 0.20952429, 0.20618121, 0.15909776, 0.15456539,
    0.25096115, 0.20605689};
float g_weight[512] = {
    0.37286398, 0.37453225, 0.39493522, 0.39923635, 0.37011161, 0.34395301,
    0.36331144, 0.41719165, 0.39923766, 0.33887783, 0.37419519, 0.40651166,
    0.31223032, 0.34742787, 0.37487265, 0.36422381, 0.3612144,  0.3390238,
    0.38813883, 0.34934312, 0.36972773, 0.35569018, 0.36255649, 0.410752,
    0.3848688,  0.38052979, 0.38419154, 0.37154919, 0.32150802, 0.40133655,
    0.39497882, 0.37776798, 0.37188476, 0.38178524, 0.37943378, 0.3294681,
    0.36641765, 0.34975857, 0.39614648, 0.37891421, 0.36065188, 0.33464539,
    0.37193787, 0.36923826, 0.37937942, 0.38776448, 0.40776372, 0.38572952,
    0.36299184, 0.39205509, 0.32899043, 0.37994051, 0.35204196, 0.38915455,
    0.40782276, 0.3494125,  0.36305419, 0.31573823, 0.37947184, 0.31587613,
    0.34841996, 0.35053313, 0.40673959, 0.35104722, 0.35212925, 0.37675324,
    0.3812345,  0.33403844, 0.31212434, 0.38597497, 0.3305538,  0.42322904,
    0.36835194, 0.38746616, 0.35828891, 0.40972507, 0.33129093, 0.3620787,
    0.30839166, 0.31424043, 0.35231531, 0.37457508, 0.38635632, 0.3347756,
    0.34667709, 0.37351108, 0.39111626, 0.38429043, 0.40948468, 0.40570098,
    0.40398338, 0.32562673, 0.35853091, 0.34348631, 0.3682445,  0.34297642,
    0.36891404, 0.38064098, 0.33785331, 0.36155146, 0.38782308, 0.35322222,
    0.3839488,  0.35189545, 0.405402,   0.39812592, 0.37731263, 0.40589383,
    0.32513982, 0.37275791, 0.35693166, 0.38092414, 0.37518623, 0.37567821,
    0.37765282, 0.32594621, 0.38496143, 0.37300289, 0.33799222, 0.33075538,
    0.3451817,  0.39072776, 0.37698871, 0.38037211, 0.33652639, 0.409031,
    0.3905423,  0.37252858, 0.37535089, 0.34793514, 0.34349546, 0.380151,
    0.38964656, 0.36795625, 0.27207285, 0.39101624, 0.39090434, 0.34857583,
    0.34987125, 0.34663802, 0.35859954, 0.30966726, 0.35790169, 0.36797172,
    0.35981587, 0.33571419, 0.39109635, 0.38980803, 0.35526398, 0.34832707,
    0.39809248, 0.33491352, 0.3328563,  0.37731048, 0.37199536, 0.385719,
    0.38130662, 0.36862817, 0.36921272, 0.37199998, 0.36964259, 0.3938131,
    0.36980191, 0.3397125,  0.43296185, 0.35601139, 0.39881074, 0.38633007,
    0.34138352, 0.36967394, 0.36144486, 0.35807109, 0.38581559, 0.38816813,
    0.36782852, 0.37674654, 0.34360051, 0.38891929, 0.37026432, 0.37915108,
    0.32834345, 0.37892365, 0.36819908, 0.37472326, 0.38986415, 0.34135833,
    0.35543266, 0.38291433, 0.35514292, 0.39774048, 0.43154654, 0.30953708,
    0.33917698, 0.35501328, 0.38479862, 0.36892027, 0.37310693, 0.37785444,
    0.36342293, 0.37888318, 0.3681013,  0.33677632, 0.38481107, 0.35790285,
    0.37746385, 0.39566684, 0.34983334, 0.37242115, 0.35321614, 0.40470681,
    0.3545087,  0.34374264, 0.36029136, 0.3832739,  0.39782053, 0.34536114,
    0.34722424, 0.37209803, 0.35805205, 0.33409849, 0.37493509, 0.36044645,
    0.3765209,  0.35890171, 0.34308389, 0.38335919, 0.43237287, 0.38659593,
    0.35435644, 0.36446592, 0.34292939, 0.40523738, 0.38575929, 0.33718744,
    0.40072721, 0.35816631, 0.37601593, 0.36407343, 0.34657383, 0.3798539,
    0.32765216, 0.3461971,  0.33836234, 0.32739219, 0.37826201, 0.38052619,
    0.37652618, 0.39825481, 0.37958804, 0.3842397,  0.41232735, 0.34698391,
    0.34217384, 0.32581222, 0.41724429, 0.40415883, 0.34230363, 0.39405087,
    0.36065495, 0.38370717, 0.34018329, 0.37608632, 0.37058771, 0.35377553,
    0.33458224, 0.36978775, 0.3115342,  0.39251307, 0.38639915, 0.37878171,
    0.35359004, 0.42027199, 0.33630705, 0.38523337, 0.38262504, 0.34670177,
    0.34177288, 0.33448371, 0.35164627, 0.35401061, 0.35334182, 0.36676395,
    0.38838923, 0.33943391, 0.34132487, 0.34257394, 0.35396668, 0.39617416,
    0.38925216, 0.35028568, 0.37672237, 0.36043233, 0.34553435, 0.38331643,
    0.37192711, 0.37729302, 0.35745695, 0.37201512, 0.36346561, 0.39230961,
    0.37024352, 0.39168352, 0.37635145, 0.36431238, 0.35092294, 0.36047474,
    0.35109869, 0.38725731, 0.38642734, 0.35882083, 0.34334832, 0.34529155,
    0.36128438, 0.36870378, 0.3776128,  0.3494243,  0.35697863, 0.36199009,
    0.3515183,  0.4119128,  0.34394136, 0.36233857, 0.37115195, 0.37086216,
    0.38662311, 0.38319811, 0.36652446, 0.3871538,  0.40237781, 0.38596889,
    0.38159236, 0.33450794, 0.3756375,  0.32712102, 0.3629919,  0.35186481,
    0.38744801, 0.34922114, 0.34271967, 0.36644256, 0.29029849, 0.31272763,
    0.33758751, 0.31345662, 0.3854717,  0.34726158, 0.34061182, 0.35737702,
    0.36013597, 0.34607521, 0.38377935, 0.36237222, 0.39400792, 0.30870768,
    0.35310906, 0.35758716, 0.38158104, 0.34797624, 0.3782146,  0.32563385,
    0.35078749, 0.376026,   0.36156926, 0.37914357, 0.34428456, 0.34812975,
    0.39827633, 0.34932566, 0.40195712, 0.38665417, 0.42893922, 0.37250367,
    0.35294259, 0.38435611, 0.38129875, 0.37064752, 0.3659519,  0.36707836,
    0.3636933,  0.34916821, 0.36799163, 0.34540635, 0.3518298,  0.37211442,
    0.33118808, 0.36910468, 0.3475678,  0.36304125, 0.36965656, 0.39725804,
    0.38507631, 0.38405746, 0.35218734, 0.37125272, 0.36294812, 0.32671455,
    0.36094886, 0.38407996, 0.3358714,  0.4087745,  0.37049589, 0.37606907,
    0.39109522, 0.38948396, 0.39121604, 0.39227358, 0.38703418, 0.38802579,
    0.33856732, 0.36652949, 0.37182739, 0.34250656, 0.35494196, 0.39318013,
    0.39650515, 0.35252503, 0.38161725, 0.34560615, 0.40600666, 0.34737962,
    0.37757501, 0.36622781, 0.39491346, 0.389878,   0.31839103, 0.40636846,
    0.36437792, 0.39330643, 0.35830712, 0.39368466, 0.4164584,  0.36458424,
    0.33277139, 0.37213841, 0.29804829, 0.33902287, 0.38465822, 0.38792709,
    0.34122097, 0.37261418, 0.36741701, 0.31977925, 0.33780202, 0.42540967,
    0.3709749,  0.36734742, 0.37219074, 0.37516925, 0.33972332, 0.31633151,
    0.36944836, 0.34931445, 0.4009997,  0.36796221, 0.33925468, 0.40881196,
    0.4525761,  0.36690861, 0.33490422, 0.34215191, 0.35292125, 0.37342864,
    0.37060034, 0.36620381, 0.3832334,  0.42003798, 0.38732412, 0.38759527,
    0.33305043, 0.35864559, 0.39325014, 0.37103689, 0.39669636, 0.40514848,
    0.34672314, 0.3851887,  0.36071932, 0.32793069, 0.35491797, 0.36929235,
    0.35021859, 0.37177795, 0.36524284, 0.37646741, 0.34754556, 0.36216331,
    0.36894917, 0.36474416, 0.36291534, 0.42608199, 0.34424421, 0.34713674,
    0.38392171, 0.34097785, 0.38508746, 0.36466029, 0.34708181, 0.38308749,
    0.36100623, 0.36344159, 0.37556693, 0.36364421, 0.32410708, 0.38055319,
    0.39232865, 0.35527447, 0.35009789, 0.37242699, 0.39674258, 0.36837614,
    0.4167476,  0.3667601};
float g_var[512] = {
    0.04367408, 0.04437035, 0.04502479, 0.05274596, 0.07408923, 0.04052031,
    0.07021658, 0.12863156, 0.03106759, 0.05932531, 0.04101077, 0.0275697,
    0.07323774, 0.03569708, 0.04940999, 0.04873534, 0.04305116, 0.14483136,
    0.04847732, 0.03272677, 0.03105449, 0.06519186, 0.06246468, 0.05640443,
    0.05464464, 0.06326926, 0.0548472,  0.04275293, 0.05889385, 0.05632196,
    0.03265827, 0.08160926, 0.04991811, 0.03919602, 0.0426088,  0.05466321,
    0.05568089, 0.04091088, 0.02419621, 0.03458441, 0.04299763, 0.03305447,
    0.04737388, 0.04234669, 0.03494014, 0.03666718, 0.05191405, 0.07943749,
    0.06497233, 0.04358204, 0.05221212, 0.05028054, 0.04148991, 0.04031718,
    0.03412336, 0.06311611, 0.07048883, 0.05321704, 0.07624825, 0.05413742,
    0.04125592, 0.07135462, 0.04296558, 0.0616071,  0.03201259, 0.05089746,
    0.02563549, 0.07967097, 0.09124249, 0.05374863, 0.06156887, 0.02949605,
    0.03340408, 0.04929901, 0.04050807, 0.03592442, 0.03370303, 0.03706317,
    0.0586536,  0.04576845, 0.05375567, 0.04016274, 0.06239823, 0.12678349,
    0.05207911, 0.03883227, 0.03610134, 0.03941897, 0.04248703, 0.04055598,
    0.02098506, 0.05876163, 0.0528474,  0.05756717, 0.0284178,  0.03628489,
    0.02886902, 0.04386463, 0.06085823, 0.02892265, 0.07407425, 0.05468317,
    0.04817061, 0.04335818, 0.03170159, 0.02341934, 0.04211245, 0.05299053,
    0.04489115, 0.0538382,  0.04914846, 0.03212655, 0.03945424, 0.04014508,
    0.04757876, 0.06213894, 0.02709129, 0.100278,   0.05894472, 0.04999007,
    0.0416849,  0.03999251, 0.03817097, 0.02488969, 0.04302783, 0.0422159,
    0.05619419, 0.06366639, 0.02921896, 0.07701634, 0.05672054, 0.06261443,
    0.05562389, 0.05744646, 0.08207353, 0.10685711, 0.04073261, 0.05927831,
    0.05362345, 0.04262011, 0.03079963, 0.09154836, 0.04048702, 0.05173499,
    0.05509327, 0.0476748,  0.04419341, 0.04315119, 0.06159484, 0.06747866,
    0.02743315, 0.03321562, 0.0785614,  0.03449702, 0.02904607, 0.05727692,
    0.06823482, 0.08885777, 0.04441986, 0.03435803, 0.04900501, 0.0837316,
    0.05411507, 0.15601574, 0.07793345, 0.05729959, 0.0360949,  0.05103608,
    0.05092403, 0.0443048,  0.05270495, 0.04482101, 0.064455,   0.06411605,
    0.03987188, 0.0271196,  0.06133441, 0.04908627, 0.07594412, 0.03684545,
    0.07492776, 0.04051217, 0.09022576, 0.03297877, 0.0352634,  0.06556305,
    0.0811994,  0.04739403, 0.04388324, 0.05212965, 0.02538079, 0.04767255,
    0.05594883, 0.06046296, 0.03851126, 0.04349183, 0.04109271, 0.02768413,
    0.04079501, 0.03887967, 0.03786711, 0.06630561, 0.08075034, 0.03574556,
    0.06082062, 0.05540809, 0.04629464, 0.04748326, 0.03853369, 0.05502025,
    0.03386749, 0.03076956, 0.0621899,  0.0460044,  0.07718319, 0.04524129,
    0.04439477, 0.04996211, 0.04362651, 0.06496838, 0.07513566, 0.06718589,
    0.03984437, 0.03990877, 0.03276746, 0.03448899, 0.04738886, 0.06341803,
    0.04886579, 0.04510576, 0.04816462, 0.04923615, 0.0460064,  0.04806201,
    0.03458985, 0.04453383, 0.02991415, 0.0920106,  0.02564458, 0.05216135,
    0.04641585, 0.03769959, 0.11955746, 0.02565737, 0.04558098, 0.11350955,
    0.06455479, 0.03506022, 0.04169449, 0.05082112, 0.05988841, 0.06600927,
    0.04603705, 0.06393471, 0.04250197, 0.11597856, 0.05064827, 0.07927374,
    0.05617269, 0.0426821,  0.04040715, 0.05483639, 0.04172897, 0.05420452,
    0.04852008, 0.03815876, 0.0608962,  0.03332081, 0.03347867, 0.05720662,
    0.05266108, 0.0442571,  0.06496914, 0.03225468, 0.10251666, 0.04320912,
    0.05516314, 0.03229017, 0.06355655, 0.04787357, 0.19131458, 0.03146071,
    0.03759877, 0.03917966, 0.05871244, 0.04981026, 0.05277815, 0.03537648,
    0.07295735, 0.06798092, 0.03332895, 0.04361107, 0.05454259, 0.06350346,
    0.04200923, 0.04861209, 0.05030769, 0.07330805, 0.04137166, 0.01652131,
    0.04497369, 0.0819433,  0.03878659, 0.02633414, 0.05770401, 0.03462194,
    0.05495181, 0.04223575, 0.04162033, 0.05457138, 0.05133415, 0.05999809,
    0.06396087, 0.04260268, 0.0369303,  0.04220506, 0.07214365, 0.0393073,
    0.0563645,  0.05173908, 0.0311589,  0.05242123, 0.04562845, 0.05769419,
    0.04763399, 0.03681902, 0.04931521, 0.05295576, 0.04564992, 0.03812379,
    0.04269742, 0.09755261, 0.0527538,  0.05635996, 0.05327955, 0.04147263,
    0.02917586, 0.05085422, 0.04544352, 0.04990692, 0.05314989, 0.04527257,
    0.02253227, 0.04960057, 0.03926592, 0.04546904, 0.06427039, 0.03816929,
    0.03558278, 0.05541838, 0.05200671, 0.03787589, 0.04035511, 0.03864579,
    0.04911047, 0.02865219, 0.04336972, 0.06150011, 0.05590225, 0.04994459,
    0.05516512, 0.06711975, 0.0621079,  0.0332269,  0.06224417, 0.04358349,
    0.05136182, 0.0541468,  0.05705979, 0.05835405, 0.03697887, 0.06360377,
    0.07263136, 0.04270439, 0.0398397,  0.05867489, 0.03174651, 0.03360285,
    0.0773601,  0.06471584, 0.05920004, 0.04203453, 0.0341648,  0.04094389,
    0.05718422, 0.05967742, 0.03654688, 0.09037027, 0.04186036, 0.02566896,
    0.05140916, 0.05361317, 0.04829147, 0.04298965, 0.05492008, 0.05898665,
    0.02939058, 0.03907609, 0.06958833, 0.07952726, 0.08813041, 0.05193575,
    0.042266,   0.03489689, 0.0241415,  0.04248441, 0.04469428, 0.05544186,
    0.04035854, 0.06193133, 0.05902575, 0.04783663, 0.03296725, 0.03519106,
    0.03851136, 0.09116131, 0.03359602, 0.05052076, 0.04087385, 0.04996307,
    0.03671122, 0.04406107, 0.05357501, 0.03221063, 0.04672604, 0.0740937,
    0.06302424, 0.09864154, 0.0387493,  0.04972714, 0.05484186, 0.05972768,
    0.05201309, 0.05088765, 0.07739433, 0.10562679, 0.04636503, 0.04046158,
    0.03761194, 0.03734284, 0.05455196, 0.04626375, 0.04602807, 0.03437793,
    0.05348029, 0.06715035, 0.0606922,  0.05009496, 0.0703983,  0.03893705,
    0.04273589, 0.06769803, 0.04457358, 0.04165686, 0.04180335, 0.05190063,
    0.03013731, 0.07521122, 0.04622477, 0.05410357, 0.07850289, 0.0526929,
    0.07033658, 0.06719351, 0.05017589, 0.03523349, 0.06417865, 0.05274265,
    0.11165347, 0.07311627, 0.0402924,  0.04722469, 0.04249445, 0.04093808,
    0.05994481, 0.04699083, 0.05079247, 0.03653668, 0.06520688, 0.03907135,
    0.03406296, 0.05633805, 0.02668538, 0.04349868, 0.05391359, 0.07415587,
    0.05848032, 0.04912319, 0.07118497, 0.03948895, 0.06406505, 0.04667373,
    0.07449988, 0.05386954, 0.04656095, 0.0538772,  0.03288507, 0.04869546,
    0.06104007, 0.05563538, 0.04978723, 0.02856594, 0.05179502, 0.03724539,
    0.04617482, 0.02032845, 0.06195525, 0.06827141, 0.03910828, 0.0356755,
    0.09114776, 0.05921336};

float bn(float input, float weight, float mean, float var) {
  return ((input - mean) / sqrt(var + 1e-5)) * weight;
}

ReidResult reid_post_process(
    const std::vector<std::vector<vitis::ai::library::InputTensor>>&
        input_tensors,
    const std::vector<std::vector<vitis::ai::library::OutputTensor>>&
        output_tensors,
    const vitis::ai::proto::DpuModelParam& config,  size_t batch_idx) {
  int sWidth = input_tensors[0][0].width;
  int sHeight = input_tensors[0][0].height;
//# DPUV1 needs input data as float
#ifdef ENABLE_DPUCADX8G_RUNNER
  float* data = (float*)output_tensors[0][0].get_data(batch_idx);
#else
  int8_t* data = (int8_t*)output_tensors[0][0].get_data(batch_idx);
#endif
  float scale = vitis::ai::library::tensor_scale(output_tensors[0][0]);
  int channels = output_tensors[0][0].channel;
  int width = output_tensors[0][0].width;
  int height = output_tensors[0][0].height;
  float a[channels];
  float sum;
  for (int c = 0; c < channels; c++) {
    sum = 0;
    for (int h = 0; h < height; ++h) {
      for (int w = 0; w < width; ++w) {
        sum += data[h * width * channels + w * channels + c] * scale;
      }
    }
    a[c] = sum / (height * width);
    a[c] = bn(a[c], g_weight[c], g_mean[c], g_var[c]);
  }
  Mat x = Mat(1, channels, CV_32F, a);
  Mat feat;
  normalize(x, feat);
  ReidResult result{sWidth, sHeight, feat};
  return result;
}

std::vector<ReidResult> reid_post_process(
    const std::vector<std::vector<vitis::ai::library::InputTensor>>&
        input_tensors,
    const std::vector<std::vector<vitis::ai::library::OutputTensor>>&
        output_tensors,
    const vitis::ai::proto::DpuModelParam& config) {
  auto batch = input_tensors[0][0].batch;  
  auto ret = std::vector<ReidResult>{};
  ret.reserve(batch);  
  for (auto i = 0u; i < batch; i++) {    
      ret.emplace_back(reid_post_process(input_tensors, output_tensors, config, i));
  }
  return ret;
}

}  // namespace ai
}  // namespace vitis
#endif
